--- a/style.css
+++ b/style.css
@@ -5,19 +5,6 @@
   user-select: none;
 }
 
-
-main{
-  box-sizing: content-box;
-  background-image: url(/mockup.png);
-  background-size: cover;
-  background-position: 0px;
-  background-repeat: no-repeat;
-  width: 330px;
-  height: 630px;
-  padding: 5px;
-
-}
-
 body {
   background-color: black;
   width: 700px; 
@@ -35,7 +22,10 @@ body {
   border-radius: 50px;
   padding: 10px;
   color: white;
-  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .top-container {
